@@ -41,19 +41,15 @@ namespace WTF {
 struct FunctionWithContext {
     MainThreadFunction* function;
     void* context;
-    ThreadCondition* syncFlag;
 
-    FunctionWithContext(MainThreadFunction* function = 0, void* context = 0, ThreadCondition* syncFlag = 0)
+    FunctionWithContext(MainThreadFunction* function = nullptr, void* context = nullptr)
         : function(function)
         , context(context)
-        , syncFlag(syncFlag)
-    { 
+    {
     }
     bool operator == (const FunctionWithContext& o)
     {
-        return function == o.function
-            && context == o.context
-            && syncFlag == o.syncFlag;
+        return function == o.function && context == o.context;
     }
 };
 
@@ -165,10 +161,6 @@ void dispatchFunctionsFromMainThread()
         }
 
         invocation.function(invocation.context);
-        if (invocation.syncFlag) {
-            MutexLocker locker(mainThreadFunctionQueueMutex());
-            invocation.syncFlag->signal();
-        }
 
         // If we are running accumulated functions for too long so UI may become unresponsive, we need to
         // yield so the user input can be processed. Otherwise user may not be able to even close the window.
